--- a/C2/W4/assignment/C2W4_Assignment.ipynb
+++ b/C2/W4/assignment/C2W4_Assignment.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a33ab7e4",
    "metadata": {
     "id": "0l5n9ToXGbRC"
    },
@@ -18,7 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "2e766e12",
    "metadata": {
     "id": "wYtuKeK0dImp",
     "tags": [
@@ -37,6 +39,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8bc170d6",
    "metadata": {
     "id": "-zwAPcriH40C"
    },
@@ -46,7 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "fd8af8ea",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -55,7 +59,16 @@
     "outputId": "c93fb5cc-0194-43c6-afea-4260cdf6f0c3",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: gdown\n",
+      "zsh:1: command not found: gdown\n"
+     ]
+    }
+   ],
    "source": [
     "# sign_mnist_train.csv\n",
     "!gdown --id 1z0DkA9BytlLxO1C0BAWzknLyQmZAp0HR\n",
@@ -65,6 +78,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9cdee49",
    "metadata": {
     "id": "tnVJZI96IMh0"
    },
@@ -75,6 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a9f282c7",
    "metadata": {
     "id": "N3fQlI99JPw9",
     "tags": [
@@ -89,6 +104,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7a1b4aa",
    "metadata": {
     "id": "iybvOtoHISHV"
    },
@@ -101,6 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2f78eab7",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -122,6 +139,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b26b5193",
    "metadata": {
     "id": "RH23LS7RHA-U"
    },
@@ -133,6 +151,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a216f6b5",
    "metadata": {
     "id": "_Slnchp3JkCk"
    },
@@ -176,6 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c3d08a4c",
    "metadata": {
     "cellView": "code",
     "id": "EO3u5NIhdNgE",
@@ -216,6 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e61f9e73",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -240,6 +261,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "056ff09b",
    "metadata": {
     "id": "xwqJykm1JqvK"
    },
@@ -255,6 +277,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5f52c2f7",
    "metadata": {
     "id": "tURDCvUKsXIw"
    },
@@ -267,6 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d841e70a",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -301,6 +325,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0baf5498",
    "metadata": {
     "id": "0QNkjIRCN5Kg"
    },
@@ -318,6 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "91226314",
    "metadata": {
     "cellView": "code",
     "id": "9ZDIvKGtNISO",
@@ -380,6 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c3dcfb88",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -403,6 +430,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63cdc167",
    "metadata": {
     "id": "cok5oQa5Rknv"
    },
@@ -418,6 +446,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7795284",
    "metadata": {
     "id": "CkHUj4PsP_jT"
    },
@@ -438,6 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cad2dcf5",
    "metadata": {
     "cellView": "code",
     "id": "Rmb7S32cgRqS",
@@ -468,6 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e1058d11",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -490,6 +521,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8cbbd961",
    "metadata": {
     "id": "mmpadXR_WGbK"
    },
@@ -500,6 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7f73d986",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -535,6 +568,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a709416e",
    "metadata": {
     "id": "PdWizvXnXAGz"
    },
@@ -546,6 +580,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93ab0a96",
    "metadata": {
     "id": "uTikUFbYTqBo"
    },
@@ -555,6 +590,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d10457ba",
    "metadata": {
     "id": "DmHC02GaTuDg"
    },
@@ -570,7 +606,7 @@
  "metadata": {
   "accelerator": "GPU",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -584,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
