--- a/C2/W4/assignment/C2W4_Assignment.ipynb
+++ b/C2/W4/assignment/C2W4_Assignment.ipynb
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "cad2dcf5",
    "metadata": {
     "cellView": "code",
@@ -552,16 +552,7 @@
      "graded"
     ]
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2442407978.py, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [45]\u001b[0;36m\u001b[0m\n\u001b[0;31m    tf.keras.layers.Dense(1024, activation='relu'),\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -577,8 +568,7 @@
     "    tf.keras.layers.Conv2D(128, (3,3), activation='relu'),\n",
     "    tf.keras.layers.MaxPooling2D(2,2),\n",
     "    tf.keras.layers.Flatten(),\n",
-    "    tf.keras.layers.Dropout(0.2)  \n",
-    "    tf.keras.layers.Dense(1024, activation='relu'),\n",
+    "    tf.keras.layers.Dense(512, activation='relu'),\n",
     "    tf.keras.layers.Dense(26, activation='softmax')\n",
     "])\n",
     "  \n",
@@ -594,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "e1058d11",
    "metadata": {
     "colab": {
@@ -611,35 +601,35 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "858/858 [==============================] - 35s 41ms/step - loss: 0.7698 - accuracy: 0.7624 - val_loss: 0.3488 - val_accuracy: 0.9087\n",
+      "858/858 [==============================] - 33s 38ms/step - loss: 0.7859 - accuracy: 0.7607 - val_loss: 0.3694 - val_accuracy: 0.8854\n",
       "Epoch 2/15\n",
-      "858/858 [==============================] - 34s 40ms/step - loss: 0.0670 - accuracy: 0.9803 - val_loss: 0.2233 - val_accuracy: 0.9374\n",
+      "858/858 [==============================] - 33s 39ms/step - loss: 0.0735 - accuracy: 0.9781 - val_loss: 0.2204 - val_accuracy: 0.9354\n",
       "Epoch 3/15\n",
-      "858/858 [==============================] - 34s 40ms/step - loss: 0.0265 - accuracy: 0.9927 - val_loss: 0.2353 - val_accuracy: 0.9433\n",
+      "858/858 [==============================] - 42s 49ms/step - loss: 0.0384 - accuracy: 0.9884 - val_loss: 0.1980 - val_accuracy: 0.9562\n",
       "Epoch 4/15\n",
-      "858/858 [==============================] - 40s 46ms/step - loss: 0.0191 - accuracy: 0.9945 - val_loss: 0.2712 - val_accuracy: 0.9458\n",
+      "858/858 [==============================] - 48s 56ms/step - loss: 0.0162 - accuracy: 0.9957 - val_loss: 0.2267 - val_accuracy: 0.9473\n",
       "Epoch 5/15\n",
-      "858/858 [==============================] - 41s 48ms/step - loss: 0.0156 - accuracy: 0.9957 - val_loss: 0.1964 - val_accuracy: 0.9519\n",
+      "858/858 [==============================] - 58s 68ms/step - loss: 0.0166 - accuracy: 0.9958 - val_loss: 0.2265 - val_accuracy: 0.9360\n",
       "Epoch 6/15\n",
-      "858/858 [==============================] - 41s 48ms/step - loss: 0.0160 - accuracy: 0.9950 - val_loss: 0.2276 - val_accuracy: 0.9506\n",
+      "858/858 [==============================] - 57s 66ms/step - loss: 0.0221 - accuracy: 0.9934 - val_loss: 0.3042 - val_accuracy: 0.9449\n",
       "Epoch 7/15\n",
-      "858/858 [==============================] - 41s 48ms/step - loss: 0.0131 - accuracy: 0.9961 - val_loss: 0.2595 - val_accuracy: 0.9533\n",
+      "858/858 [==============================] - 55s 64ms/step - loss: 0.0071 - accuracy: 0.9979 - val_loss: 0.3078 - val_accuracy: 0.9455\n",
       "Epoch 8/15\n",
-      "858/858 [==============================] - 44s 51ms/step - loss: 0.0120 - accuracy: 0.9972 - val_loss: 0.2938 - val_accuracy: 0.9485\n",
+      "858/858 [==============================] - 58s 68ms/step - loss: 0.0176 - accuracy: 0.9951 - val_loss: 0.2533 - val_accuracy: 0.9459\n",
       "Epoch 9/15\n",
-      "858/858 [==============================] - 52s 61ms/step - loss: 0.0016 - accuracy: 0.9996 - val_loss: 0.3383 - val_accuracy: 0.9504\n",
+      "858/858 [==============================] - 64s 75ms/step - loss: 0.0106 - accuracy: 0.9970 - val_loss: 0.2704 - val_accuracy: 0.9380\n",
       "Epoch 10/15\n",
-      "858/858 [==============================] - 56s 65ms/step - loss: 0.0144 - accuracy: 0.9958 - val_loss: 0.2999 - val_accuracy: 0.9474\n",
+      "858/858 [==============================] - 64s 75ms/step - loss: 0.0091 - accuracy: 0.9972 - val_loss: 0.1891 - val_accuracy: 0.9512\n",
       "Epoch 11/15\n",
-      "858/858 [==============================] - 51s 60ms/step - loss: 0.0074 - accuracy: 0.9980 - val_loss: 0.3545 - val_accuracy: 0.9480\n",
+      "858/858 [==============================] - 67s 78ms/step - loss: 0.0074 - accuracy: 0.9983 - val_loss: 0.1614 - val_accuracy: 0.9605\n",
       "Epoch 12/15\n",
-      "858/858 [==============================] - 44s 52ms/step - loss: 1.5204e-04 - accuracy: 1.0000 - val_loss: 0.2948 - val_accuracy: 0.9557\n",
+      "858/858 [==============================] - 71s 83ms/step - loss: 0.0108 - accuracy: 0.9970 - val_loss: 0.2982 - val_accuracy: 0.9435\n",
       "Epoch 13/15\n",
-      "858/858 [==============================] - 45s 53ms/step - loss: 0.0157 - accuracy: 0.9956 - val_loss: 0.3518 - val_accuracy: 0.9435\n",
+      "858/858 [==============================] - 63s 73ms/step - loss: 0.0048 - accuracy: 0.9984 - val_loss: 0.2837 - val_accuracy: 0.9532\n",
       "Epoch 14/15\n",
-      "858/858 [==============================] - 45s 53ms/step - loss: 0.0038 - accuracy: 0.9989 - val_loss: 0.3440 - val_accuracy: 0.9544\n",
+      "858/858 [==============================] - 60s 70ms/step - loss: 0.0098 - accuracy: 0.9971 - val_loss: 0.2994 - val_accuracy: 0.9410\n",
       "Epoch 15/15\n",
-      "858/858 [==============================] - 51s 59ms/step - loss: 0.0095 - accuracy: 0.9973 - val_loss: 0.2820 - val_accuracy: 0.9504\n"
+      "131/858 [===>..........................] - ETA: 46s - loss: 0.0022 - accuracy: 0.9990"
      ]
     }
    ],
