--- a/C3/W4/assignment/C3W4_Assignment.ipynb
+++ b/C3/W4/assignment/C3W4_Assignment.ipynb
@@ -858,13 +858,13 @@
   }
  ],
  "metadata": {
-  "dlai_version": "1.2.0",
   "accelerator": "GPU",
+  "dlai_version": "1.2.0",
   "jupytext": {
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -878,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
